# Projet-Kaggle

./: README.md  estim-pop-areg-sexe-gca-1975-2015.xls  pyproject.toml
data/: train_meteo.csv
data/data_modelisation/: test_full.csv
data/processed/: FINAL_TEST.csv  google_trends_clean.xlsx  (+18 more)
deleted_files/: 012_preprocessing_meteo.ipynb  01_preprocessing_train_test.ipynb  ancien_meilleur_score_catboost.py  catboost_roland.py  enrichissement_train_test.py  submission_blend_conservative.csv  submission_flu.csv  submission_flu_lags_123.csv  submission_global_conservative.csv  test_enriched.csv  test_full.csv
notebooks/: 011_preprocessing_demographie.ipynb  011_preprocessing_pop_requetes.ipynb  012_preprocessing_meteo.ipynb  012_preprocessing_train_meteo.ipynb  013_preprocessing_test_meteo.ipynb  01_EDA_train.ipynb  01_EDA_train_Melissa.ipynb  01_preprocessing_train.ipynb  01_preprocessing_train_test.ipynb  02_EDA_demographie_pop.ipynb  02_EDA_demographie_requetes.ipynb  02_EDA_pop_requetes_meteo.ipynb  02_merge_final.ipynb  03_Modelisation_Finale.ipynb  03_Modelisation_Grippe.ipynb  03_Modelisation_initiale.ipynb  03_Modelisation_roland.ipynb  Modelisation_XGB.ipynb  Modelisation_XGBMODEL.ipynb  Modélisation_finale_100.ipynb  submission.csv  submission_optimized_simple.csv  submission_xgboost.csv  submission_xgboost_advanced.csv  submission_xgboost_optimized.csv  test_full.csv  train_full.csv  train_meteo.ipynb
processed/: google_trends_consolide.xlsx  google_trends_requetes.xlsx  pop_train.csv
src/: catboost_ancien_meilleur_score.py  eda.py  preprocessing.py
(+20 files in other folders)
